--- a/app/src/main/res/layout/fragment_poke.xml
+++ b/app/src/main/res/layout/fragment_poke.xml
@@ -9,5 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pokedex_recy"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true" />
 </FrameLayout>
