--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -3,12 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:descendantFocusability="blocksDescendants"
+    >
 
     <TextView
         android:id="@+id/pokemon_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:focusable="false"
+        android:clickable="false"
+        />
 </LinearLayout>
